--- a/nga/index.html
+++ b/nga/index.html
@@ -7,7 +7,9 @@
     <link rel = "stylesheet" href = "index.css">
 </head>
 <body>
-    <div id = "revolver"></div>
+    <div id = "revolver">
+        <div id = "drum"></div>
+    </div>
     <div class = "person" id = "player-one"></div>
     <div class = "person" id = "player-two"></div>
 
