--- a/nga/index.html
+++ b/nga/index.html
@@ -7,12 +7,16 @@
     <link rel = "stylesheet" href = "index.css">
 </head>
 <body>
+    <div id = "info"></div>
     <div id = "revolver">
+        <div id = "handle"></div>
+        <div id = "rifle"></div>
         <div id = "drum"></div>
     </div>
-    <div class = "person" id = "player-one"></div>
-    <div class = "person" id = "player-two"></div>
-
+    <div id = "bullet-container"><div class = "bullet"></div></div>
+    <div class = "person" id = "player-one">Player One</div>
+    <div class = "person" id = "player-two">Player Two</div>
+    
     <script src = "index.js"></script>
 </body>
 </html>
